GetChildren, activate club-children, remove club-children, register child